# blackduck_heatmap_metrics

./: .gitignore  CHANGELOG.md  INSTALL.md  MANIFEST.in  README.md  install.ps1  main.py  pyproject.toml  release.ps1  requirements.txt  setup.py  template.html  template_simple.html
blackduck_metrics/: __init__.py  analyzer.py  blackduck_connector.py  cli.py
blackduck_metrics/templates/: __init__.py  template.html  template_project_scans.html  template_simple.html
