[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "blackduck-heatmap-metrics"
version = "0.1.3"
description = "Black Duck scan heatmap metrics analyzer with interactive visualizations"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["blackduck", "security", "metrics", "analysis", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=2.0.0",
    "jinja2>=3.1.0",
    "plotly>=5.18.0",
    "tqdm>=4.65.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/blackduck-heatmap-metrics"
Documentation = "https://github.com/yourusername/blackduck-heatmap-metrics#readme"
Repository = "https://github.com/yourusername/blackduck-heatmap-metrics"
Issues = "https://github.com/yourusername/blackduck-heatmap-metrics/issues"

[project.scripts]
bdmetrics = "blackduck_metrics.cli:main"

[tool.setuptools]
packages = ["blackduck_metrics"]

[tool.setuptools.package-data]
blackduck_metrics = ["templates/*.html"]
