[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackduck-heatmap-metrics"
version = "0.1.17"
description = "Black Duck scan heatmap metrics analyzer with interactive visualizations"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Jouni Lehto", email = "lehto.jouni@gmail.com"}
]
keywords = ["blackduck", "security", "metrics", "analysis", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=3.0.1",
    "jinja2>=3.1.6",
    "plotly>=6.6.0",
    "tqdm>=4.67.3",
    "blackduck>=1.1.3",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/lejouni/blackduck_heatmap_metrics"
Documentation = "https://github.com/lejouni/blackduck_heatmap_metrics#readme"
Repository = "https://github.com/lejouni/blackduck_heatmap_metrics"
Issues = "https://github.com/lejouni/blackduck_heatmap_metrics/issues"

[project.scripts]
bdmetrics = "blackduck_metrics.cli:main"

[tool.setuptools]
packages = ["blackduck_metrics"]

[tool.setuptools.package-data]
blackduck_metrics = ["templates/*.html"]
